2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* aux/macros/func_bad_hasmntopt.m4: new M4 macro to test for a bad
	hasmntopt() function, which incorrectly finds the option "soft" in
	a string "hard,softlookup,ro".

	* libamu/hasmntopt.c (hasmntopt): use 'const' on two args to
	hasmntopt(), to match what most systems use.

	* aux/macros/header_templates.m4: template for HAVE_BAD_HASMNTOPT.

	* configure.in: invoke test for bad hasmntopt()

	* NEWS: minor new port, i386-pc-linux-rh8.0.

	* bootstrap: remove any autom4te-*.cache directories, now that
	autoconf uses a version number for them.

2002-12-09  Ion Badulescu  <ionut@moisil.badula.org>

	Patches from Christos Zoulas:

	-1- am_utils.h: add full prototypes
	-2- amfs_auto.c make functions static and add prototypes
	-3- map.c: kill double free
	-5- transp_sockets.c: add full prototypes

2002-12-09  Ion Badulescu  <ionut@moisil.badula.org>

	* NEWS: updated

	* doc/am-utils.texi (opts Option): document sftlookup

	* conf/autofs/autofs_solaris_v2_v3.c: compile fixes

2002-11-22  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* amd/info_ldap.c (amu_ldap_rebind): gopt.ldap_cache_seconds is
	%ld not %d.

2002-11-21  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* {amd,fsinfo}/Makefile.am: remove special rules for processing
	yacc/lex files, now that autoconf/automake properly handle them
	better (esp. now that bison 1.75 behaves differently than older
	bison versions).

2002-11-21  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess.long: updated script so it will properly find the
	version number of the new Itanium 2 machines running "Red Hat
	Linux Advanced Workstation release 2.1AW (Derry)".  The script now
	will report ia64-unknown-linux-rh2.1AW.

2002-11-20  Ion Badulescu  <ionut@moisil.badula.org>

	* amfs_auto_bgmount(): almost complete rewrite

	* fixed amfs_inherit to do the right thing and not dereference
	freed mntfs'es

	* #if 0'ed bogus code in fh_to_mp3() -- it is now done properly in