@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: mtab.c,v 1.10 2002/02/02 20:59:04 ezk Exp $
+ * $Id: mtab.c,v 1.11 2002/12/10 19:55:36 ezk Exp $
  *
  */
 
@@ -124,7 +124,7 @@ hasmnteq(mntent_t *mnt, char *opt)
 {
   if (mnt && opt) {		/* disallow null input pointers */
     if ( *opt ) {		/* disallow the null string as an opt */
-      char *str = hasmntopt(mnt, opt);
+      char *str = amu_hasmntopt(mnt, opt);
       if ( str ) {		/* option was there */
 	char *eq = str + strlen(opt); /* Look at char just after option */
 	if (*eq == '=')		/* Is it '=' ? */
@@ -144,7 +144,7 @@ hasmnteq(mntent_t *mnt, char *opt)
 int
 hasmntval(mntent_t *mnt, char *opt)
 {
-  char *str = hasmntopt(mnt, opt);
+  char *str = amu_hasmntopt(mnt, opt);
 
   if (str) { /* The option was there */
 
